--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a href="https://jackverstraate.com">Personal Website</a>
             </h3>
             <p>
-              This website. Built with HTML, CSS, and JavaScript and hosted on an Apache2 web server. Built to learn about the fundamentals of web development, but also as a place that I control and can share my projects and passions.
+              This website. Built with HTML, CSS, and JavaScript and hosted on GitHub Pages. Built to learn about the fundamentals of web development, but also as a place that I control and can share my projects and passions.
             </p>
           </article>
           <article>
