--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 I'm drawn to software because I love solving problems. There's nothing like a JavaScript function finally behaving, or an error finally yielding to a debugging in C. Time flies when I'm programming. I easily get lost in the flow of prototyping and testing until the system clicks.
               </p>
               <p>
-                You can find me on <a href="https://www.linkedin.com/in/jackverstraate/">LinkedIn</a>, <a href="https://github.com/jackverstraate">GitHub</a>, and <a href="https://letterboxd.com/LeftoverWaffle">Letterboxd</a> if you like movies!
+                You can find me on <a href="https://www.linkedin.com/in/jackverstraate/">LinkedIn</a> and <a href="https://github.com/jackverstraate">GitHub</a>!
               </p>
             </div>
             <figure class="about-photo">
